--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -3,113 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <title>Portfolio</title>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+            integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+            crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+            integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+            crossorigin="anonymous"></script>
 
 </head>
 <body>
 <div class="container">
-    <header id="main-header">
-        <div class="row no-gutters">
-            <div class="col-lg-4 col-md-5">
-                <img src="img/person1.jpg" alt="">
-            </div>
-            <div class="col-lg-8 col-md-7">
-                <div class="d-flex flex-column">
-                    <div class="p-5 bg-dark text-white">
-                        <div class="d-flex flex-row justify-content-between align-items-center">
-                            <h1 class="display-4">John Doe</h1>
-                            <div class="d-none d-md-block">
-                                <a href="http://twitter.com" class="text-white">
-                                    <i class="fab fa-twitter"></i>
-                                </a>
-                            </div>
-                            <div>
-                                <a href="http://facebook.com" class="text-white">
-                                    <i class="fab fa-facebook"></i>
-                                </a>
-                            </div>
-                            <div>
-                                <a href="http://instagram.com" class="text-white">
-                                    <i class="fab fa-instagram"></i>
-                                </a>
-                            </div>
-                            <div>
-                                <a href="http://github.com" class="text-white">
-                                    <i class="fab fa-github"></i>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="p-4 bg-black">
-                        Experienced Full Stack Web Developer
-                    </div>
-                    <div>
-                        <div class="d-flex flex-row text-white align-items-stretch text-center">
-                            <div class="port-item p-4 bg-primary" data-toggle="collapse" data-target="#home">
-                                <i class="fas fa-home fa-2x d-block"></i>
-                                <span class="d-none d-sm-block">Home</span>
-                            </div>
-                            <div class="port-item p-4 bg-success" data-toggle="collapse" data-target="#resume">
-                                <i class="fas fa-graduation-cap fa-2x d-block"></i>
-                                <span class="d-none d-sm-block">Resume</span>
-                            </div>
-                            <div class="port-item p-4 bg-warning" data-toggle="collapse" data-target="#work">
-                                <i class="fas fa-folder-open fa-2x d-block"></i>
-                                <span class="d-none d-sm-block">Work</span>
-                            </div>
-                            <div class="port-item p-4 bg-danger" data-toggle="collapse" data-target="#contact">
-                                <i class="fas fa-envelope fa-2x d-block"></i>
-                                <span class="d-none d-sm-block">Contact</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </header>
-    <!-- home page -->
-    <div id="home" class="collapse show">
-        <div class="card card-body bg-primary text-white py-5">
-            <h2>Welcome To My Page</h2>
-            <p class="lead">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil, ut!</p>
-        </div>
-        <div class="card card-body py-5">
-            <h3>My Skills</h3>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus ea excepturi officia quisquam atque eos.</p>
-            <hr>
-            <h4>HTML 5</h4>
-            <div class="progress mb-3">
-                <div class="progress-bar bg-success" style="width:100%"></div>
-            </div>
-            <h4>CSS 3</h4>
-            <div class="progress mb-3">
-                <div class="progress-bar bg-success" style="width:100%"></div>
-            </div>
-            <h4>JavaScript</h4>
-            <div class="progress mb-3">
-                <div class="progress-bar bg-success" style="width:90%"></div>
-            </div>
-            <h4>PHP</h4>
-            <div class="progress mb-3">
-                <div class="progress-bar bg-success" style="width:80%"></div>
-            </div>
-            <h4>Python</h4>
-            <div class="progress mb-3">
-                <div class="progress-bar bg-success" style="width:70%"></div>
-            </div>
-        </div>
+    <div>
+        <img src="img/person1.jpg" alt="Profile picture">
     </div>
-    <footer id="main-footer" class="p-5 bg-dark text-white">
-        <div class="row">
-            <div class="col-md-6">
-                <a href="#" class="btn btn-outline-light">
-                    <i class="fas fa-cloud"></i> Download Resume
-                </a>
-            </div>
-        </div>
-    </footer>
 </div>
 </body>
 </html>
