--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -16,9 +16,21 @@
 </head>
 <body>
 <div class="container">
-    <div>
-        <img src="img/person1.jpg" alt="Profile picture">
-    </div>
+    <img src="img/person1.jpg" alt="Profile picture">
+    <h2>John Doe</h2>
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#">Something</a>
+            </div>
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="#">Home</a></li>
+                <li><a href="#">Page 1</a></li>
+                <li><a href="#">Page 2</a></li>
+                <li><a href="#">Page 3</a></li>
+            </ul>
+        </div>
+    </nav>
 </div>
 </body>
 </html>
