Söökla main divs and css

--- a/menu/index.html
+++ b/menu/index.html
@@ -11,6 +11,20 @@
     <title>Söökla</title>
 </head>
 <body>
-
+<div class="container-fluid text-center">
+    <div class="row">
+        <div class="col">
+            <div id="accordion">
+                <div class="card m-3">
+                    <div class="card-header alert-dark">
+                        <a href="#praed" data-parent="#accordion" data-toggle="collapse" >
+                            <h2 class="text-dark">PRAED <i class="fas fa-utensils"></i></h2>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
