--- a/menu/index.html
+++ b/menu/index.html
@@ -21,6 +21,44 @@
                             <h2 class="text-dark">PRAED <i class="fas fa-utensils"></i></h2>
                         </a>
                     </div>
+                    <div id="praed" class="collapse">
+                        <ul class="list-group">
+                            <li class="list-group-item">
+                                <p class="mb-0">Sealihapada ploomide ja aprikoosiga <br>
+                                    <span class="small text-secondary">sealihapada, lisand, salat, leib</span><br>
+                                    <span class="badge badge-info">2.65€</span>
+                                    <span class="badge badge-success">2.25€</span>
+                                </p>
+                            </li>
+                            <li class="list-group-item">
+                                <p class="mb-0">Praetud kanakints <br>
+                                    <span class="small text-secondary">praetud kana, lisand, salat, leib</span><br>
+                                    <span class="badge badge-info">2.50€</span>
+                                    <span class="badge badge-success">2.13€</span>
+                                </p>
+                            </li>
+                            <li class="list-group-item">
+                                <p class="mb-0">Hakklihakaste <br>
+                                    <span class="small text-secondary">hakklihakaste, lisand, salat, leib</span><br>
+                                    <span class="badge badge-info">2.45€</span>
+                                    <span class="badge badge-success">2.08€</span>
+                                </p>
+                            </li>
+                            <li class="list-group-item">
+                                <p class="mb-0">Kartul, kaste, salat, leib <br>
+                                    <span class="badge badge-info">1.38€</span>
+                                    <span class="badge badge-success">1.17€</span>
+                                </p>
+                            </li>
+                            <li class="list-group-item">
+                                <p class="mb-0">Hakklihakaste 1/2<br>
+                                    <span class="small text-secondary">hakklihakaste, lisand, salat, leib</span><br>
+                                    <span class="badge badge-info">1.30€</span>
+                                    <span class="badge badge-success">1.11€</span>
+                                </p>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
