--- a/menu/index.html
+++ b/menu/index.html
@@ -60,6 +60,24 @@
                         </ul>
                     </div>
                 </div>
+                <div class="card m-3">
+                    <div class="card-header alert-dark">
+                        <a href="#supid" data-parent="#accordion" data-toggle="collapse" >
+                            <h2 class="text-dark">SUPID <i class="fas fa-utensil-spoon"></i></h2>
+                        </a>
+                    </div>
+                    <div id="supid" class="collapse">
+                        <ul class="list-group">
+                            <li class="list-group-item">
+                                <p class="mb-0">Rassolnik <br>
+                                    <span class="small text-secondary">supp, hapukoor, leib</span><br>
+                                    <span class="badge badge-info">1.10€</span>
+                                    <span class="badge badge-success">0.94€</span>
+                                </p>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
