--- a/menu/index.html
+++ b/menu/index.html
@@ -78,6 +78,23 @@
                         </ul>
                     </div>
                 </div>
+                <div class="card m-3">
+                    <div class="card-header alert-dark">
+                        <a href="#magus" data-parent="#accordion" data-toggle="collapse" >
+                            <h2 class="text-dark">MAGUSTOIDUD <i class="fas fa-cookie-bite"></i></h2>
+                        </a>
+                    </div>
+                    <div id="magus" class="collapse">
+                        <ul class="list-group">
+                            <li class="list-group-item">
+                                <p class="mb-0">Rosinakisell vahukoorega <br>
+                                    <span class="badge badge-info">1.05€</span>
+                                    <span class="badge badge-success">0.90€</span>
+                                </p>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
