--- a/menu/index.html
+++ b/menu/index.html
@@ -95,9 +95,33 @@
                         </ul>
                     </div>
                 </div>
+
+                <div class="card m-3">
+                    <div class="card-header alert-dark">
+                        <a href="#joogid" data-parent="#accordion" data-toggle="collapse" >
+                            <h2 class="text-dark">JOOGID <i class="fas fa-glass-whiskey"></i></h2>
+                        </a>
+                    </div>
+                    <div id="joogid" class="collapse">
+                        <ul class="list-group">
+                            <li class="list-group-item">
+                                <p class="mb-0">Mahl <span class="badge badge-info">0.60€</span></p>
+                            </li>
+                            <li class="list-group-item">
+                                <p class="mb-0">Morss <span class="badge badge-info">0.25€</span></p>
+                            </li>
+                            <li class="list-group-item">
+                                <p class="mb-0">Piim <span class="badge badge-info">0.30€</span></p>
+                            </li>
+                            <li class="list-group-item">
+                                <p class="mb-0">Keefir <span class="badge badge-info">0.39€</span></p>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 </div>
 </body>
-</html>
+</html> 
